fix layout issues

--- a/style.css
+++ b/style.css
@@ -69,3 +69,5 @@ color:lightgray;
 
 .ends{font-size:1.5em;}
 
+ul{list-style:none;}
+
